--- a/basesystem/Dockerfile.in
+++ b/basesystem/Dockerfile.in
@@ -1,6 +1,6 @@
 
-#define COMMENT(name) #int fun_##name
-COMMENT(ff)
+#define COMMENT(hash, name) hash include name
+COMMENT(#,"hello")
 
 #if 0
 Define a base image and provide a tag for it, default is latest
