--- a/basesystem/Dockerfile.in
+++ b/basesystem/Dockerfile.in
@@ -1,10 +1,7 @@
 
-#define COMMENT(hash, name) hash include name
-COMMENT(#,"hello")
+#define COMMENT(hash, input)hash input
 
-#if 0
-Define a base image and provide a tag for it, default is latest
-#endif
+COMMENT(#,Define a base image and provide a tag for it, default is latest)
 FROM ubuntu:latest
 MAINTAINER me
 
