--- a/basesystem/Dockerfile.in
+++ b/basesystem/Dockerfile.in
@@ -1,7 +1,7 @@
 
 #define COMMENT(hash, input)hash input
 
-COMMENT(#,Define a base image and provide a tag for it, default is latest)
+COMMENT(#,Define a base image and provide a tag for it)
 FROM ubuntu:latest
 MAINTAINER me
 
