--- a/basesystem/Dockerfile.in
+++ b/basesystem/Dockerfile.in
@@ -1,11 +1,38 @@
-
 #define COMMENT(hash,input)hash input
 
-COMMENT(#,Define a base image and provide a tag for it)
-FROM ubuntu:latest
+COMMENT(#,Define a base image for all CoolProp images)
+FROM coolprop/debian
+
 
 #include "../buildsteps/docker.maintainer.txt"
 
+
+#include "../buildsteps/docker.user.root.txt"
+
+ENV DEBIAN_FRONTEND noninteractive
+
+COMMENT(#,Install the development packages and compilers)
 #include "../buildsteps/apt-get.start.txt"
-#include "../buildsteps/apt-get.install.devtools.txt"
+build-essential gfortran gcc cmake git \
+bash rsync curl wget nano \
+python-dev python-pip && \\
+
 #include "../buildsteps/apt-get.stop.txt"
+
+
+COMMENT(#,Make sure bash is the standard shell)
+RUN rm /bin/sh && ln -sf /bin/bash /bin/sh
+
+
+COMMENT(#,Add some standard host keys)
+RUN \
+mkdir ${HOME}/.ssh && \
+ssh-keyscan github.com >> ${HOME}/.ssh/known_hosts && \
+ssh-keyscan bitbucket.org >> ${HOME}/.ssh/known_hosts && \
+ssh-keyscan coolprop.org >> ${HOME}/.ssh/known_hosts && \
+ssh-keyscan coolprop.dreamhosters.com >> ${HOME}/.ssh/known_hosts && \
+cat ${HOME}/.ssh/known_hosts
+
+
+COMMENT(#,Add the entrypoint)
+ENTRYPOINT ["/bin/sh"]
