Added full path to apt-get

--- a/basesystem/32bit/Dockerfile
+++ b/basesystem/32bit/Dockerfile
@@ -5,7 +5,7 @@ FROM coolprop/debian32
 MAINTAINER Jorrit Wronski (jowr@ipu.dk)
 ENV DEBIAN_FRONTEND noninteractive
  # Install the development packages and compilers
-RUN apt-get update -qq && apt-get install -y \
+RUN /usr/bin/apt-get update -qq && apt-get install -y \
 build-essential gfortran gcc cmake git bash rsync curl wget nano python-dev python-pip && \
 apt-get autoclean && apt-get clean && apt-get autoremove
  # Make sure bash is the standard shell
