--- a/slavebase/Dockerfile.in
+++ b/slavebase/Dockerfile.in
@@ -9,8 +9,10 @@ FROM coolprop/basesystem
 
 COMMENT(#,Install the buildbot slave software and add the appropriate user)
 RUN groupadd -r buildbot && useradd -r -d /home/buildbot -m -s /bin/bash -g buildbot buildbot
-USER buildbot
-WORKDIR /home/buildbot
+
+#include "../buildsteps/docker.user.bot.txt"
+
+
 RUN pip install buildbot-slave --user
 
 COMMENT(#,Add the entrypoint that creates a repository on first launch)
