--- a/slavepython/Dockerfile.in
+++ b/slavepython/Dockerfile.in
@@ -11,7 +11,7 @@ FROM coolprop/slavebase
 #include "../buildsteps/docker.user.root.txt"
 
 
-COMMENT(#,Install system tools for compilation of Python extensions numpy and scipy and pandas)
+COMMENT(#,Install system tools for compilation of Python extensions numpy-scipy-pandas)
 #include "../buildsteps/apt-get.start.txt"
 build-essential gcc python-dev \
 libhdf5-serial-dev libnetcdf-dev liblapack-dev libatlas-dev libblas-dev && \\
@@ -19,7 +19,7 @@ libhdf5-serial-dev libnetcdf-dev liblapack-dev libatlas-dev libblas-dev && \\
 #include "../buildsteps/apt-get.stop.txt"
 
 
-#include "../buildsteps/docker.user.root.txt"
+#include "../buildsteps/docker.user.bot.txt"
 
 
 COMMENT(#,Install miniconda Python distribution)
