--- a/slaveweb/Dockerfile.in
+++ b/slaveweb/Dockerfile.in
@@ -35,6 +35,7 @@ ENV PATH /home/buildbot/miniconda3/bin:/home/buildbot/miniconda/bin:$PATH
 
 COMMENT(#,Add the additional packages to the conda environment)
 RUN \
+conda install conda-build && \
 conda create -n CoolPropWeb python=2.7 setuptools requests cython numpy scipy matplotlib pandas ipython wxpython && \
 conda clean -yilts
 
