--- a/slavebase/Dockerfile.in
+++ b/slavebase/Dockerfile.in
@@ -7,13 +7,16 @@ FROM coolprop/basesystem
 #include "../buildsteps/docker.maintainer.txt"
 
 
+#include "../buildsteps/docker.user.root.txt"
+
+
+RUN pip install buildbot-slave
+
 COMMENT(#,Install the buildbot slave software and add the appropriate user)
 RUN groupadd -r buildbot && useradd -r -d /home/buildbot -m -s /bin/bash -g buildbot buildbot
 
 #include "../buildsteps/docker.user.bot.txt"
 
-
-RUN pip install buildbot-slave --user
 
 COMMENT(#,Add the entrypoint that creates a repository on first launch)
 COPY ./entrypoint.sh /
