--- a/slavelinux/Dockerfile.in
+++ b/slavelinux/Dockerfile.in
@@ -26,8 +26,17 @@ r-base-dev scilab julia && \\
 
 COMMENT(#,Install emscripten distribution including LLVM)
 RUN curl -o emscripten.tar.gz "https://s3.amazonaws.com/mozilla-games/emscripten/releases/emsdk-portable.tar.gz" && \
-tar -xvf emscripten.tar.gz && cd emsdk_portable && \
-./emsdk update && ./emsdk install latest && ./emsdk activate latest && \
-echo "source $PWD/emsdk_env.sh" >> /home/buildbot/.bash_profile
+tar -xvf emscripten.tar.gz && rm emscripten.tar.gz
+
+RUN pushd emsdk_portable && ./emsdk update && \
+./emsdk install clang-master-64bit && \
+./emsdk install emscripten-master-64bit && \
+./emsdk install sdk-master-64bit && \
+popd
+
+RUN pushd emsdk_portable && ./emsdk activate latest && \
+echo "$PWD/emsdk activate latest" >> /home/buildbot/.bash_profile && \
+echo "source $PWD/emsdk_env.sh" >> /home/buildbot/.bash_profile && \
+popd 
 
 COMMENT(#,Some commercial wrappers are missing - Mathematica - MATLAB)
