Started to create a new slave with proprietary software

--- a/slavelinuxopen/Dockerfile.in
+++ b/slavelinuxopen/Dockerfile.in
@@ -1,6 +1,6 @@
 #define COMMENT(hash,input)hash input
 
-COMMENT(#,Define an image to build most of the 64bit CoolProp wrappers on the Linux platform)
+COMMENT(#,Define an image to build the open-source 64bit CoolProp wrappers on the Linux platform)
 FROM coolprop/slavepython
 
 
