--- a/slavelinuxfull/Dockerfile.in
+++ b/slavelinuxfull/Dockerfile.in
@@ -10,9 +10,9 @@ FROM coolprop/slavelinuxopen
 #include "../buildsteps/docker.user.root.txt"
 
 
-COMMENT(#,Install MATLAB.)
-COPY resources/matlab_R2015b_glnxa64 /tmp/
-RUN /tmp/matlab_R2015b_glnxa64/install
+COMMENT(#,Install MATLAB - be sure to edit matlab_R2015b_glnxa64/installer_input.txt accordingly)
+COPY resources/matlab_R2015b_glnxa64 /tmp/matlab_R2015b_glnxa64
+RUN /tmp/matlab_R2015b_glnxa64/install -inputFile /tmp/matlab_R2015b_glnxa64/installer_input.txt
 
 
 #include "../buildsteps/docker.user.bot.txt"
