--- a/slavelinuxopen/Dockerfile.in
+++ b/slavelinuxopen/Dockerfile.in
@@ -1,7 +1,7 @@
-#define COMMENT(hash,input)hash input
+#include "../buildsteps/base.txt"
 
 COMMENT(#,Define an image to build the open-source 64bit CoolProp wrappers on the Linux platform)
-FROM coolprop/slavepython
+FROM coolprop/slavepython:VERSION
 
 
 #include "../buildsteps/docker.maintainer.txt"
