Added python 3.5 to support CoolProp/CoolProp#1002

--- a/slavepython/Dockerfile.in
+++ b/slavepython/Dockerfile.in
@@ -34,4 +34,5 @@ conda install conda-build && \
 conda create -n CoolProp27 python=2.7 cython pip requests jinja2 pyyaml pycrypto numpy scipy matplotlib pandas wheel && \
 conda create -n CoolProp33 python=3.3 cython pip requests jinja2 pyyaml pycrypto numpy scipy matplotlib pandas wheel && \
 conda create -n CoolProp34 python=3.4 cython pip requests jinja2 pyyaml pycrypto numpy scipy matplotlib pandas wheel && \
+conda create -n CoolProp35 python=3.5 cython pip requests jinja2 pyyaml pycrypto numpy scipy matplotlib pandas wheel && \
 conda clean -yilts
