--- a/slavepython/Dockerfile.in
+++ b/slavepython/Dockerfile.in
@@ -24,15 +24,15 @@ libhdf5-serial-dev libnetcdf-dev liblapack-dev libatlas-dev libblas-dev && \\
 
 COMMENT(#,Install miniconda Python distribution)
 RUN curl -o miniconda.sh "http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh" && \
-chmod +x miniconda.sh && ./miniconda.sh -b && rm miniconda.sh && \
+chmod +x miniconda.sh && linux64 ./miniconda.sh -b && rm miniconda.sh && \
 echo "export PATH=/home/buildbot/miniconda3/bin:/home/buildbot/miniconda2/bin:$PATH" >> /home/buildbot/.bash_profile
 ENV PATH /home/buildbot/miniconda3/bin:/home/buildbot/miniconda2/bin:$PATH
 
 COMMENT(#,Add the miniconda environments for the Python builds)
 RUN \
-conda install conda-build && \
-conda create -n CoolProp27 python=2.7 cython pip requests jinja2 pyyaml pycrypto numpy scipy matplotlib pandas wheel && \
-conda create -n CoolProp33 python=3.3 cython pip requests jinja2 pyyaml pycrypto numpy scipy matplotlib pandas wheel && \
-conda create -n CoolProp34 python=3.4 cython pip requests jinja2 pyyaml pycrypto numpy scipy matplotlib pandas wheel && \
-conda create -n CoolProp35 python=3.5 cython pip requests jinja2 pyyaml pycrypto numpy scipy matplotlib pandas wheel && \
-conda clean -yilts
+linux64 conda install conda-build && \
+linux64 conda create -n CoolProp27 python=2.7 cython pip requests jinja2 pyyaml pycrypto numpy scipy matplotlib pandas wheel && \
+linux64 conda create -n CoolProp33 python=3.3 cython pip requests jinja2 pyyaml pycrypto numpy scipy matplotlib pandas wheel && \
+linux64 conda create -n CoolProp34 python=3.4 cython pip requests jinja2 pyyaml pycrypto numpy scipy matplotlib pandas wheel && \
+linux64 conda create -n CoolProp35 python=3.5 cython pip requests jinja2 pyyaml pycrypto numpy scipy matplotlib pandas wheel && \
+linux64 conda clean -yilts
