--- a/manylinux/Dockerfile.in
+++ b/manylinux/Dockerfile.in
@@ -1,25 +1,25 @@
 #include "../buildsteps/base.txt"
 
-COMMENT(#,Define an image for building the manylinux wheels for Python)
+COMMENT(#,Define an image for building the 64bit manylinux wheels for Python)
 FROM quay.io/pypa/manylinux1_x86_64
 
 COMMENT(#,Install Cmake (either from source (reliable) or from yum (64-bit only and it does not symlink in a cmake executable)))
 COMMENT(#,ALTERNATE: RUN yum install -y cmake28 && ln -s `which cmake28` /usr/local/bin/cmake)
-RUN wget --no-check-certificate "http://www.cmake.org/files/v2.8/cmake-2.8.10.2.tar.gz" && tar -zxvf cmake-2.8.10.2.tar.gz && cd cmake-2.8.10.2 && linux64 ./bootstrap && linux64 make && linux64 make install
+RUN wget --no-check-certificate "http://www.cmake.org/files/v2.8/cmake-2.8.10.2.tar.gz" && tar -zxvf cmake-2.8.10.2.tar.gz && cd cmake-2.8.10.2 && ./bootstrap && make && make install
 
 COMMENT(#,Install virtualenv into one of the python installations for creating other virtual environments)
 RUN \
-linux64 /opt/python/cp27-cp27m/bin/pip install virtualenv && \
-linux64 /opt/python/cp27-cp27m/bin/virtualenv /py27   --python=/opt/python/cp27-cp27m/bin/python && \
-linux64 /opt/python/cp27-cp27m/bin/virtualenv /py27mu --python=/opt/python/cp27-cp27mu/bin/python && \
-linux64 /opt/python/cp27-cp27m/bin/virtualenv /py33   --python=/opt/python/cp33-cp33m/bin/python && \
-linux64 /opt/python/cp27-cp27m/bin/virtualenv /py34   --python=/opt/python/cp34-cp34m/bin/python && \
-linux64 /opt/python/cp27-cp27m/bin/virtualenv /py35   --python=/opt/python/cp35-cp35m/bin/python
+/opt/python/cp27-cp27m/bin/pip install virtualenv && \
+/opt/python/cp27-cp27m/bin/virtualenv /py27   --python=/opt/python/cp27-cp27m/bin/python && \
+/opt/python/cp27-cp27m/bin/virtualenv /py27mu --python=/opt/python/cp27-cp27mu/bin/python && \
+/opt/python/cp27-cp27m/bin/virtualenv /py33   --python=/opt/python/cp33-cp33m/bin/python && \
+/opt/python/cp27-cp27m/bin/virtualenv /py34   --python=/opt/python/cp34-cp34m/bin/python && \
+/opt/python/cp27-cp27m/bin/virtualenv /py35   --python=/opt/python/cp35-cp35m/bin/python
 
 COMMENT(#,Install pip packages needed)
 RUN \
-linux64 /py27/bin/pip install cython && \
-linux64 /py27mu/bin/pip install cython && \
-linux64 /py33/bin/pip install cython && \
-linux64 /py34/bin/pip install cython && \
-linux64 /py35/bin/pip install cython
+/py27/bin/pip install cython && \
+/py27mu/bin/pip install cython && \
+/py33/bin/pip install cython && \
+/py34/bin/pip install cython && \
+/py35/bin/pip install cython
