--- a/slavepython/Dockerfile.in
+++ b/slavepython/Dockerfile.in
@@ -35,4 +35,5 @@ linux64 conda create -n CoolProp27 python=2.7 cython pip requests jinja2 pyyaml 
 linux64 conda create -n CoolProp33 python=3.3 cython pip requests jinja2 pyyaml pycrypto numpy scipy matplotlib pandas wheel && \
 linux64 conda create -n CoolProp34 python=3.4 cython pip requests jinja2 pyyaml pycrypto numpy scipy matplotlib pandas wheel && \
 linux64 conda create -n CoolProp35 python=3.5 cython pip requests jinja2 pyyaml pycrypto numpy scipy matplotlib pandas wheel && \
+linux64 conda create -n CoolProp36 python=3.6 cython pip requests jinja2 pyyaml pycrypto numpy scipy matplotlib pandas wheel && \
 linux64 conda clean -yilts
