--- a/manylinux/32bit/Dockerfile
+++ b/manylinux/32bit/Dockerfile
@@ -4,7 +4,8 @@ FROM quay.io/pypa/manylinux1_i686
  # Install Cmake (either from source (reliable) or from yum (64-bit only and it does not symlink in a cmake executable))
  # ALTERNATE: RUN yum install -y cmake28 && ln -s `which cmake28` /usr/local/bin/cmake
  # ALTERNATE: RUN wget --no-check-certificate "http://www.cmake.org/files/v2.8/cmake-2.8.12.2.tar.gz" && tar -zxvf cmake-2.8.12.2.tar.gz && cd cmake-2.8.12.2 && ./bootstrap && make && make install
-RUN yum remove -yt cmake && yum install -y cmake3 && cd /usr/bin && ln -s cmake3 cmake && ln -s ccmake3 ccmake && ln -s cpack3 cpack && ln -s ctest3 ctest
+ # RUN yum remove -yt cmake && yum install -y cmake3 && cd /usr/bin && ln -s cmake3 cmake && ln -s ccmake3 ccmake && ln -s cpack3 cpack && ln -s ctest3 ctest
+RUN wget --no-check-certificate "http://www.cmake.org/files/v3.10/cmake-3.10.1.tar.gz" && tar -zxvf cmake-3.10.1.tar.gz && cd cmake-3.10.1 && ./bootstrap && gmake && gmake install
  # Install virtualenv into one of the python installations for creating other virtual environments
 RUN /opt/python/cp27-cp27m/bin/pip install virtualenv && /opt/python/cp27-cp27m/bin/virtualenv /py27 --python=/opt/python/cp27-cp27m/bin/python && /opt/python/cp27-cp27m/bin/virtualenv /py27mu --python=/opt/python/cp27-cp27mu/bin/python && /opt/python/cp27-cp27m/bin/virtualenv /py33 --python=/opt/python/cp33-cp33m/bin/python && /opt/python/cp27-cp27m/bin/virtualenv /py34 --python=/opt/python/cp34-cp34m/bin/python && /opt/python/cp27-cp27m/bin/virtualenv /py35 --python=/opt/python/cp35-cp35m/bin/python
  # Install pip packages needed
