--- a/manylinux/Dockerfile.in
+++ b/manylinux/Dockerfile.in
@@ -5,8 +5,9 @@ FROM quay.io/pypa/manylinux1_x86_64
 
 COMMENT(#,Install Cmake (either from source (reliable) or from yum (64-bit only and it does not symlink in a cmake executable)))
 COMMENT(#,ALTERNATE: RUN yum install -y cmake28 && ln -s `which cmake28` /usr/local/bin/cmake)
-COMMENT(#,RUN wget --no-check-certificate "http://www.cmake.org/files/v2.8/cmake-2.8.12.2.tar.gz" && tar -zxvf cmake-2.8.12.2.tar.gz && cd cmake-2.8.12.2 && ./bootstrap && make && make install)
-RUN yum remove -yt cmake && yum install -y cmake3 && cd /usr/bin && ln -s cmake3 cmake && ln -s ccmake3 ccmake && ln -s cpack3 cpack && ln -s ctest3 ctest
+COMMENT(#,ALTERNATE: RUN wget --no-check-certificate "http://www.cmake.org/files/v2.8/cmake-2.8.12.2.tar.gz" && tar -zxvf cmake-2.8.12.2.tar.gz && cd cmake-2.8.12.2 && ./bootstrap && make && make install)
+COMMENT(#,ALTERNATE: RUN yum remove -yt cmake && yum install -y cmake3 && cd /usr/bin && ln -s cmake3 cmake && ln -s ccmake3 ccmake && ln -s cpack3 cpack && ln -s ctest3 ctest)
+RUN wget --no-check-certificate "http://www.cmake.org/files/v3.10/cmake-3.10.1.tar.gz" && tar -zxvf cmake-3.10.1.tar.gz && cd cmake-3.10.1 && ./bootstrap && gmake && gmake install
 
 COMMENT(#,Install virtualenv into one of the python installations for creating other virtual environments)
 RUN \
