--- a/manylinux/Dockerfile.in
+++ b/manylinux/Dockerfile.in
@@ -17,7 +17,7 @@ RUN \
 /opt/python/cp27-cp27m/bin/virtualenv /py33   --python=/opt/python/cp33-cp33m/bin/python && \
 /opt/python/cp27-cp27m/bin/virtualenv /py34   --python=/opt/python/cp34-cp34m/bin/python && \
 /opt/python/cp27-cp27m/bin/virtualenv /py35   --python=/opt/python/cp35-cp35m/bin/python && \
-/opt/python/cp27-cp27m/bin/virtualenv /py36   --python=/opt/python/cp36-cp36m/bin/python &&
+/opt/python/cp27-cp27m/bin/virtualenv /py36   --python=/opt/python/cp36-cp36m/bin/python
 
 COMMENT(#,Install pip packages needed)
 RUN \
