Added an ENV variable and removed gpg dependencies

--- a/debian/32bit/Dockerfile
+++ b/debian/32bit/Dockerfile
@@ -2,3 +2,5 @@
 FROM i386/debian:stable
  # File Author / Maintainer
 MAINTAINER Jorrit Wronski <jowr@ipu.dk>
+
+ENV LANG=C.UTF-8 LC_ALL=C.UTF-8 DEBIAN_FRONTEND=noninteractive
