--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+notifications:
+  email:
+    on_success: never
+    on_failure: change
+
 sudo: required
 
 services:
@@ -9,10 +14,9 @@ stages:
     if: tag = true
     #if: branch = master OR tag = true
 
-build::images:
-  - stage: build
-    script: make full-release
-
-deploy::latest:
-  - stage: deploy
-    script: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && make full-push
+jobs:
+  include:
+    - stage: build
+      script: make full-release
+    - stage: deploy
+      script: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && make full-push
