--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ services:
   - docker
 
 stages:
+  - prepare
   - build
   - name: deploy
     if: tag = true
@@ -16,7 +17,11 @@ stages:
 
 jobs:
   include:
+    - stage: prepare
+      script: make debian
+      script: make clean
+      script: make manylinux
     - stage: build
-      script: make clean && make full-release
+      script: make full-release
     - stage: deploy
       script: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && make full-push
