--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ stages:
 jobs:
   include:
     - stage: prepare
-      script: make debian
       script: make clean
-      script: make manylinux
+      script: make debian
+      script: make manylinux-build
     - stage: build
       script: make full-release
     - stage: deploy
