--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 
 install:
   - make debian-build
-  - make manylinux-build
+  #- make manylinux-build
 
 #script: 
 #  - make full-release
