--- a/obsolete/slaveweb/Dockerfile.in
+++ b/obsolete/slaveweb/Dockerfile.in
@@ -1,7 +1,7 @@
 #include "../buildsteps/base.txt"
 
 COMMENT(#,Define an image to build the CoolProp documentation)
-FROM coolprop/slavebase:VERSION
+FROM coolprop/slavebase:TAG
 
 
 #include "../buildsteps/docker.maintainer.txt"
