--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ jobs:
         - if [ -n "$TRAVIS_TAG" ]; then make basesystem-build TAG="$TRAVIS_TAG"; else make basesystem-build TAG="latest"; fi
         - if [ -n "$TRAVIS_TAG" ]; then docker tag coolprop/basesystem   coolprop/basesystem:"$TRAVIS_TAG"  ; fi
         - if [ -n "$TRAVIS_TAG" ]; then docker tag coolprop/basesystem32 coolprop/basesystem32:"$TRAVIS_TAG"; fi
-        - if [ -n "$TRAVIS_TAG" -o ("$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false") ]; then docker push coolprop/basesystem; fi
-        - if [ -n "$TRAVIS_TAG" -o ("$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false") ]; then docker push coolprop/basesystem32; fi
+        - if [ -n "$TRAVIS_TAG" -o \("$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false"\) ]; then docker push coolprop/basesystem; fi
+        - if [ -n "$TRAVIS_TAG" -o \("$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false"\) ]; then docker push coolprop/basesystem32; fi
     - stage: build::workerbase
       script: 
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
@@ -42,8 +42,8 @@ jobs:
         - if [ -n "$TRAVIS_TAG" ]; then make workerbase-build TAG="$TRAVIS_TAG"; else make workerbase-build TAG="latest"; fi
         - if [ -n "$TRAVIS_TAG" ]; then docker tag coolprop/workerbase   coolprop/workerbase:"$TRAVIS_TAG"  ; fi
         - if [ -n "$TRAVIS_TAG" ]; then docker tag coolprop/workerbase32 coolprop/workerbase32:"$TRAVIS_TAG"; fi
-        - if [ -n "$TRAVIS_TAG" -o ("$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false") ]; then docker push coolprop/workerbase; fi
-        - if [ -n "$TRAVIS_TAG" -o ("$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false") ]; then docker push coolprop/workerbase32; fi
+        - if [ -n "$TRAVIS_TAG" -o \("$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false"\) ]; then docker push coolprop/workerbase; fi
+        - if [ -n "$TRAVIS_TAG" -o \("$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false"\) ]; then docker push coolprop/workerbase32; fi
     - stage: build::workerpython
       script: 
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
@@ -51,8 +51,8 @@ jobs:
         - if [ -n "$TRAVIS_TAG" ]; then make workerpython-build TAG="$TRAVIS_TAG"; else make workerpython-build TAG="latest"; fi
         - if [ -n "$TRAVIS_TAG" ]; then docker tag coolprop/workerpython   coolprop/workerpython:"$TRAVIS_TAG"  ; fi
         - if [ -n "$TRAVIS_TAG" ]; then docker tag coolprop/workerpython32 coolprop/workerpython32:"$TRAVIS_TAG"; fi
-        - if [ -n "$TRAVIS_TAG" -o ("$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false") ]; then docker push coolprop/workerpython; fi
-        - if [ -n "$TRAVIS_TAG" -o ("$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false") ]; then docker push coolprop/workerpython32; fi
+        - if [ -n "$TRAVIS_TAG" -o \("$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false"\) ]; then docker push coolprop/workerpython; fi
+        - if [ -n "$TRAVIS_TAG" -o \("$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false"\) ]; then docker push coolprop/workerpython32; fi
     - stage: build::manylinux
       script: 
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
@@ -60,5 +60,5 @@ jobs:
         - if [ -n "$TRAVIS_TAG" ]; then make manylinux-build TAG="$TRAVIS_TAG"; else make manylinux-build TAG="latest"; fi
         - if [ -n "$TRAVIS_TAG" ]; then docker tag coolprop/manylinux   coolprop/manylinux:"$TRAVIS_TAG"  ; fi
         - if [ -n "$TRAVIS_TAG" ]; then docker tag coolprop/manylinux32 coolprop/manylinux32:"$TRAVIS_TAG"; fi
-        - if [ -n "$TRAVIS_TAG" -o ("$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false") ]; then docker push coolprop/manylinux; fi
-        - if [ -n "$TRAVIS_TAG" -o ("$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false") ]; then docker push coolprop/manylinux32; fi
+        - if [ -n "$TRAVIS_TAG" -o \("$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false"\) ]; then docker push coolprop/manylinux; fi
+        - if [ -n "$TRAVIS_TAG" -o \("$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false"\) ]; then docker push coolprop/manylinux32; fi
