--- a/manylinux/Dockerfile.in
+++ b/manylinux/Dockerfile.in
@@ -3,6 +3,10 @@
 COMMENT(#,Define an image for building the 64bit manylinux wheels for Python)
 FROM quay.io/pypa/manylinux1_x86_64
 
+
+#include "../buildsteps/docker.maintainer.txt"
+
+
 COMMENT(#,Install Cmake (either from source (reliable) or from yum (64-bit only and it does not symlink in a cmake executable)))
 COMMENT(#,ALTERNATE: RUN yum install -y cmake28 && ln -s `which cmake28` /usr/local/bin/cmake)
 COMMENT(#,ALTERNATE: RUN wget --no-check-certificate "http://www.cmake.org/files/v2.8/cmake-2.8.12.2.tar.gz" && tar -zxvf cmake-2.8.12.2.tar.gz && cd cmake-2.8.12.2 && ./bootstrap && make && make install)
